refactor(converters): Align custom jdbc converters registration